--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "mermaid":"11.6.0",
     "prismjs": "^1.30.0",
     "react": "^19",
+    "reactflow": "^11.11.4",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
