--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # production
 /build
 
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -25,3 +26,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.contentlayer
